@@ -1,3 +1,8 @@
+Sat Nov 13 20:13:03 2004  Tim Janik  <timj@gtk.org>
+
+	* davbassfilter.*:
+	* davchorus.*: moved modules into Bse:: namespace.
+
 Fri Oct  8 11:25:30 2004  Tim Janik  <timj@gtk.org>
 
 	* artscompressor.cc: include bse/bsemath.h instead of math.h
